# cytt

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  askama.toml  build.rs
.github/workflows/: docker.yml
assets/static/css/: style.css
assets/static/js/: script.js
assets/templates/: group.ics  index.html
src/: api.rs  calendar.rs  config.rs  db.rs  io.rs  main.rs  templates.rs
src/celcat/: auth.rs  calendar.rs  mod.rs  models.rs
src/utils/: date.rs  fs.rs  header_map.rs  image.rs  logging.rs  mod.rs  num.rs  string.rs
