[package]
name = "cytt"
version = "0.0.0"
edition = "2021"
authors = ["zkayia"]
repository = "https://github.com/zkayia/cytt"
readme = "./README.md"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.75"
askama = "0.12.1"
axum = "0.7.2"
chrono = { version = "0.4.31", features = ["serde"] }
html-escape = "0.2.13"
image = "0.24.7"
imageproc = "0.23.0"
once_cell = "1.19.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "cookies", "rustls-tls"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
rusttype = "0.9.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "time", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "trace", "set-header"] }

[build-dependencies]
anyhow = "1.0.75"
regex = "1.10.2"
